[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/main.gd" type="Script" id=1]
[ext_resource path="res://images/x.png" type="Texture" id=2]
[ext_resource path="res://images/plus.png" type="Texture" id=3]
[ext_resource path="res://scenes/color_picker.tscn" type="PackedScene" id=4]
[ext_resource path="res://themes/theme.tres" type="Theme" id=5]
[ext_resource path="res://images/transparent.png" type="Texture" id=7]
[ext_resource path="res://images/forest.jpg" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]

[sub_resource type="DynamicFont" id=2]

[sub_resource type="StyleBoxLine" id=3]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="HBox" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Colors" type="PanelContainer" parent="HBox"]
margin_right = 209.0
margin_bottom = 600.0

[node name="Scroll" type="ScrollContainer" parent="HBox/Colors"]
margin_left = 4.0
margin_top = 4.0
margin_right = 205.0
margin_bottom = 596.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="HBox/Colors/Scroll"]
margin_right = 201.0
margin_bottom = 385.0
size_flags_horizontal = 3
custom_constants/separation = 4

[node name="Palettes" type="OptionButton" parent="HBox/Colors/Scroll/VBox"]
margin_right = 201.0
margin_bottom = 27.0

[node name="Buttons" type="HBoxContainer" parent="HBox/Colors/Scroll/VBox"]
margin_top = 31.0
margin_right = 201.0
margin_bottom = 58.0
alignment = 1

[node name="Add" type="Button" parent="HBox/Colors/Scroll/VBox/Buttons"]
margin_left = 8.0
margin_right = 32.0
margin_bottom = 27.0
hint_tooltip = "Add a color to the palette."
custom_fonts/font = SubResource( 1 )
icon = ExtResource( 3 )

[node name="Delete" type="Button" parent="HBox/Colors/Scroll/VBox/Buttons"]
margin_left = 36.0
margin_right = 60.0
margin_bottom = 27.0
hint_tooltip = "Remove a color from the palette."
icon = ExtResource( 2 )

[node name="Import" type="Button" parent="HBox/Colors/Scroll/VBox/Buttons"]
margin_left = 64.0
margin_right = 192.0
margin_bottom = 27.0
text = "Import Palette"

[node name="Marg" type="MarginContainer" parent="HBox/Colors/Scroll/VBox"]
margin_top = 62.0
margin_right = 201.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="Grid" type="GridContainer" parent="HBox/Colors/Scroll/VBox/Marg"]
margin_left = 2.0
margin_top = 2.0
margin_right = 199.0
margin_bottom = 2.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 2
custom_constants/hseparation = 2
columns = 9

[node name="HSeparator" type="HSeparator" parent="HBox/Colors/Scroll/VBox"]
margin_top = 70.0
margin_right = 201.0
margin_bottom = 74.0

[node name="UsePalette" type="HBoxContainer" parent="HBox/Colors/Scroll/VBox"]
margin_top = 78.0
margin_right = 201.0
margin_bottom = 105.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBox/Colors/Scroll/VBox/UsePalette"]
margin_top = 4.0
margin_right = 173.0
margin_bottom = 23.0
size_flags_horizontal = 3
text = "Use Palette"

[node name="CheckButton" type="CheckBox" parent="HBox/Colors/Scroll/VBox/UsePalette"]
margin_left = 177.0
margin_right = 201.0
margin_bottom = 27.0
pressed = true
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Outline" type="HBoxContainer" parent="HBox/Colors/Scroll/VBox"]
margin_top = 109.0
margin_right = 201.0
margin_bottom = 136.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBox/Colors/Scroll/VBox/Outline"]
margin_top = 4.0
margin_right = 173.0
margin_bottom = 23.0
size_flags_horizontal = 3
text = "Outline"

[node name="CheckButton" type="CheckBox" parent="HBox/Colors/Scroll/VBox/Outline"]
margin_left = 177.0
margin_right = 201.0
margin_bottom = 27.0
pressed = true
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutlineColor" type="HBoxContainer" parent="HBox/Colors/Scroll/VBox"]
margin_top = 140.0
margin_right = 201.0
margin_bottom = 160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBox/Colors/Scroll/VBox/OutlineColor"]
margin_right = 177.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Outline Color"

[node name="ColorRect" type="ColorRect" parent="HBox/Colors/Scroll/VBox/OutlineColor"]
margin_left = 181.0
margin_right = 201.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
color = Color( 0, 0, 0, 1 )

[node name="Button" type="Button" parent="HBox/Colors/Scroll/VBox/OutlineColor/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
flat = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Resize" type="HBoxContainer" parent="HBox/Colors/Scroll/VBox"]
margin_top = 164.0
margin_right = 201.0
margin_bottom = 191.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBox/Colors/Scroll/VBox/Resize"]
margin_top = 4.0
margin_right = 173.0
margin_bottom = 23.0
size_flags_horizontal = 3
text = "Resize Image"

[node name="CheckButton" type="CheckBox" parent="HBox/Colors/Scroll/VBox/Resize"]
margin_left = 177.0
margin_right = 201.0
margin_bottom = 27.0
pressed = true
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PixelSize" type="HBoxContainer" parent="HBox/Colors/Scroll/VBox"]
margin_top = 195.0
margin_right = 201.0
margin_bottom = 222.0
rect_pivot_offset = Vector2( 1278, -347 )
hint_tooltip = "The ratio of the resolution of the original image to the result image."

[node name="Label" type="Label" parent="HBox/Colors/Scroll/VBox/PixelSize"]
margin_top = 4.0
margin_right = 77.0
margin_bottom = 23.0
size_flags_horizontal = 3
text = "Pixel Size"

[node name="SpinBox" type="SpinBox" parent="HBox/Colors/Scroll/VBox/PixelSize"]
margin_left = 81.0
margin_right = 201.0
margin_bottom = 27.0
min_value = 1.0
value = 10.0

[node name="Blur" type="HBoxContainer" parent="HBox/Colors/Scroll/VBox"]
margin_top = 226.0
margin_right = 201.0
margin_bottom = 253.0
rect_pivot_offset = Vector2( 1278, -347 )
hint_tooltip = "The ratio of the resolution of the original image to the result image."

[node name="Label" type="Label" parent="HBox/Colors/Scroll/VBox/Blur"]
margin_top = 4.0
margin_right = 77.0
margin_bottom = 23.0
size_flags_horizontal = 3
text = "Blur"

[node name="SpinBox" type="SpinBox" parent="HBox/Colors/Scroll/VBox/Blur"]
margin_left = 81.0
margin_right = 201.0
margin_bottom = 27.0
max_value = 10.0

[node name="HSeparator2" type="HSeparator" parent="HBox/Colors/Scroll/VBox"]
margin_top = 257.0
margin_right = 201.0
margin_bottom = 261.0

[node name="Select" type="Button" parent="HBox/Colors/Scroll/VBox"]
margin_top = 265.0
margin_right = 201.0
margin_bottom = 292.0
text = "Select Image"

[node name="Gen" type="Button" parent="HBox/Colors/Scroll/VBox"]
margin_top = 296.0
margin_right = 201.0
margin_bottom = 323.0
text = "Generate Image"

[node name="Save" type="Button" parent="HBox/Colors/Scroll/VBox"]
margin_top = 327.0
margin_right = 201.0
margin_bottom = 354.0
text = "Save Image"

[node name="Credits" type="Button" parent="HBox/Colors/Scroll/VBox"]
margin_top = 358.0
margin_right = 201.0
margin_bottom = 385.0
text = "Credits"

[node name="Images" type="PanelContainer" parent="HBox"]
margin_left = 209.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="TextureRect" type="TextureRect" parent="HBox/Images"]
margin_left = 4.0
margin_top = 4.0
margin_right = 811.0
margin_bottom = 596.0
texture = ExtResource( 7 )
stretch_mode = 2

[node name="VBox" type="VBoxContainer" parent="HBox/Images"]
margin_left = 4.0
margin_top = 4.0
margin_right = 811.0
margin_bottom = 596.0
size_flags_horizontal = 3

[node name="Before" type="TextureRect" parent="HBox/Images/VBox"]
margin_right = 807.0
margin_bottom = 290.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="HSeparator" type="HSeparator" parent="HBox/Images/VBox"]
margin_top = 294.0
margin_right = 807.0
margin_bottom = 298.0
custom_styles/separator = SubResource( 3 )

[node name="After" type="TextureRect" parent="HBox/Images/VBox"]
margin_top = 302.0
margin_right = 807.0
margin_bottom = 592.0
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 130.0
rect_min_size = Vector2( 512, 300 )
access = 2
filters = PoolStringArray( "*.bmp", "*.dds", "*.exr", "*.hdr", "*.jpg", "*.jpeg", "*.png", "*.tga", "*.svg", "*.svgz", "*.webp" )
current_dir = "/game_development/projects/pixel-art-converter"
current_path = "/game_development/projects/pixel-art-converter/"

[node name="Error" type="AcceptDialog" parent="."]
margin_right = 83.0
margin_bottom = 58.0
rect_min_size = Vector2( 200, 100 )
dialog_autowrap = true

[node name="Credits" type="PopupPanel" parent="."]
margin_right = 8.0
margin_bottom = 8.0
rect_min_size = Vector2( 300, 150 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Credits"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
bbcode_enabled = true
bbcode_text = "[center]Credits
Programming - Exuin
Palettes from [url=https://lospec.com/palette-list]Lospec[/url]
m5x7 font by [url=https://managore.itch.io/m5x7]David Linssen[/url]
Default photo by [url=https://unsplash.com/@sakulich?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText]Sergei Akulich[/url] on [url=https://unsplash.com/s/photos/forest?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText]Unsplash[/url]
Made with [url=https://godotengine.org/license]Godot 3.3.3[/url][/center]"
text = "Credits
Programming - Exuin
Palettes from Lospec
m5x7 font by David Linssen
Default photo by Sergei Akulich on Unsplash
Made with Godot 3.3.3"
__meta__ = {
"_edit_lock_": true
}

[node name="Working" type="PopupPanel" parent="."]
margin_right = 8.0
margin_bottom = 8.0
rect_min_size = Vector2( 200, 100 )
popup_exclusive = true

[node name="Label" type="Label" parent="Working"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
text = "Working..."
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="ColorPop" type="PopupPanel" parent="."]
margin_right = 371.0
margin_bottom = 496.0

[node name="ColorPicker" parent="ColorPop" instance=ExtResource( 4 )]
margin_left = 4.0
margin_top = 4.0
margin_right = 367.0
margin_bottom = 492.0

[connection signal="item_selected" from="HBox/Colors/Scroll/VBox/Palettes" to="." method="_on_palettes_item_selected" flags=3]
[connection signal="pressed" from="HBox/Colors/Scroll/VBox/Buttons/Add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="HBox/Colors/Scroll/VBox/Buttons/Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="HBox/Colors/Scroll/VBox/Buttons/Import" to="." method="_on_import_pressed"]
[connection signal="pressed" from="HBox/Colors/Scroll/VBox/OutlineColor/ColorRect/Button" to="." method="_on_outline_color_pressed"]
[connection signal="pressed" from="HBox/Colors/Scroll/VBox/Select" to="." method="_on_select_pressed"]
[connection signal="pressed" from="HBox/Colors/Scroll/VBox/Gen" to="." method="_on_gen_pressed"]
[connection signal="pressed" from="HBox/Colors/Scroll/VBox/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="HBox/Colors/Scroll/VBox/Credits" to="." method="_on_credits_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="meta_clicked" from="Credits/RichTextLabel" to="." method="_on_meta_clicked"]
[connection signal="color_changed" from="ColorPop/ColorPicker" to="." method="_on_color_picker_color_changed"]
